[package]
name = "bps"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'
strip = true
